--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,16 @@
   display: inline-block;
 }
 
+.wrap-vertical::-webkit-scrollbar {
+  display: none;
+}
+
+/* window.scroll({
+  top: 100,
+  left: 100,
+  behavior: "smooth",
+}); */
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
