--- a/src/index.css
+++ b/src/index.css
@@ -33,3 +33,15 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
+
+@media screen and (max-width: 1023px) {
+  .w-responsive-custom {
+    width: 50%;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .w-responsive-custom {
+    width: 100%;
+  }
+}
